Changes in <next release>:
 * Fix loading translator via command line

Bug fixes in 1.25.1:
 * Fix 2D dataset expressions
 * Fix 2D X,Y,Z dataset expressions
 * Better error checking in Gnuplot import plugin
 * Catch non-single character delimiters for 2D CSV import
 * Fix SETTING(), BASENAME(), FILENAME() and DATA() in function evaluation
 * More self tests

Changes in 1.25:
 * Add n-dimensional dataset support
 * Add GetColormap command to return RGBA values
 * Add Colormap sequence plugin for choosing colors of widgets
 * Fill above/below setting shown in key for xy widget
 * Add Covariance widget for plotting covariance ellipses
 * Add lineup, linedown, lineleft and lineright markers
 * Add lineup, linedown and lineextend arrows

Bug fixes:
 * Fix pick indices if non-finite values in data
 * Fix drag and drop of files into Veusz on Windows
 * Raise exception if functions in console request input, avoiding hang
 * Initialise unsafe_mode, in case Veusz used in PyQt embedding
 * Fix crash if setting default setting in default setting window
 * Fix crash in Clone() command on python3

Changes in 1.24:
 * Text labels can now include Python expressions inside %{{ }}%
 * Added built-in functions DATE([fmt]), TIME([fmt]), FILENAME() and BASENAME()
   when evaluating expressions, which are useful when used in labels
 * Added Python dictionary ENVIRON when evaluating expressions, to obtain
   values from environment variables
 * Added DATA(name, [part]) function to expression environment for accessing
   values from datasets, useful for function evaluation or labels
 * Added SETTING(path) function for expression evaluation to obtain values
   of settings
 * Added ESCAPE(text) function to environment, which allows LaTeX special
   characters to be displayed in labels
 * Add fractions and percentages units to polar plot
 * Allow number of spokes to be varied in polar plot
 * Widgets can be clicked holding down shift or ctrl, to add or toggle their
   selection